build: reduce output #1

--- a/package.json
+++ b/package.json
@@ -46,11 +46,11 @@
         "lint:style": "stylelint **/*.scss",
         "//6": "",
         "type-coverage": "npm-run-all -s type-coverage:* && npm-run-all -s type-coverage:test:*:*",
-        "type-coverage:prepare": "make-dir ./coverage/type-report/client && make-dir ./coverage/type-report/server && make-dir ./coverage/type-report/tests/unit/client && make-dir ./coverage/type-report/tests/unit/server",
-        "type-coverage:client": "typescript-coverage-report -p ./src/client/tsconfig.json -o ./coverage/type-report/client",
-        "type-coverage:server": "typescript-coverage-report -p ./src/server/tsconfig.json -o ./coverage/type-report/server",
-        "type-coverage:test:unit:client": "typescript-coverage-report -p ./tests/unit/client/tsconfig.json -o ./coverage/type-report/tests/unit/client",
-        "type-coverage:test:unit:server": "typescript-coverage-report -p ./tests/unit/server/tsconfig.json -o ./coverage/type-report/tests/unit/server",
+        "type-coverage:prepare": "is-ci || make-dir ./coverage/type-report/client && make-dir ./coverage/type-report/server && make-dir ./coverage/type-report/tests/unit/client && make-dir ./coverage/type-report/tests/unit/server",
+        "type-coverage:client": "is-ci && type-coverage -p ./src/client/tsconfig.json --at-least 95 || typescript-coverage-report -p ./src/client/tsconfig.json -o ./coverage/type-report/client",
+        "type-coverage:server": "is-ci && type-coverage -p ./src/server/tsconfig.json --at-least 95 || typescript-coverage-report -p ./src/server/tsconfig.json -o ./coverage/type-report/server",
+        "type-coverage:test:unit:client": "is-ci && type-coverage -p ./tests/unit/client/tsconfig.json --at-least 95 || typescript-coverage-report -p ./tests/unit/client/tsconfig.json -o ./coverage/type-report/tests/unit/client",
+        "type-coverage:test:unit:server": "is-ci && type-coverage -p ./tests/unit/server/tsconfig.json --at-least 95 || typescript-coverage-report -p ./tests/unit/server/tsconfig.json -o ./coverage/type-report/tests/unit/server",
         "//7": "",
         "prepare": "npm-run-all -s prepare:*",
         "prepare:eslint-plugin-boilerplate": "cd ./dev/eslint-plugin-boilerplate && npm ci && npm run build",
