--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     },
     "bin": "bin/index.js",
     "scripts": {
+        "start": "nodemon -w ./dist/server --delay --exec \"node --inspect --enable-source-maps\" ./dist/server/server.js",
+        "start:dev": "nodemon -w ./dist/server --delay --exec \"node --inspect --enable-source-maps\" ./dist/server/server.js",
         "dev": "npm-run-all -p dev:!(app)",
         "dev:server": "npm run compile:build:client:config && concurrently \"npm run compile:dev:server:config\" \"webpack --mode development --watch --config webpack.config.server.js\"",
         "dev:web": "npm run compile:build:client:config && concurrently \"npm run compile:dev:client:config\" \"vue-cli-service serve --env development --deep-monitoring --source-map-support\"",
@@ -165,6 +167,7 @@
         "lint-staged": "^13.2.1",
         "make-dir-cli": "^3.0.0",
         "native-run": "^1.7.2",
+        "nodemon": "^2.0.22",
         "npm": "^9.6.5",
         "npm-run-all": "^4.1.5",
         "nyc": "^15.1.0",
