fix(type): fix pipeline #15

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,4 +44,8 @@ jobs:
               run: npm run type-coverage
 
             - name: Run unit tests
-              run: npm run test:unit
+              uses: nick-fields/retry@v2
+              with:
+                  retry_on: error
+                  max_attempts: 3
+                  command: npm run test:unit
