--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,9 @@
 {
+    "buildOptions": {
+        "dry": true,
+        "incremental": true,
+        "force": true
+    },
     "compilerOptions": {
         "target": "esnext",
         "module": "esnext",
