--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.21.5",
-        "@capacitor/android": "4.0.1",
-        "@capacitor/app": "4.0.1",
-        "@capacitor/core": "4.0.1",
-        "@capacitor/haptics": "4.0.1",
-        "@capacitor/ios": "4.0.1",
-        "@capacitor/keyboard": "4.0.1",
-        "@capacitor/status-bar": "4.0.1",
+        "@capacitor/android": "^5.0.0",
+        "@capacitor/app": "^5.0.0",
+        "@capacitor/core": "^5.0.0",
+        "@capacitor/haptics": "^5.0.0",
+        "@capacitor/ios": "^5.0.0",
+        "@capacitor/keyboard": "^5.0.0",
+        "@capacitor/status-bar": "^5.0.0",
         "@ionic/pwa-elements": "^3.1.1",
         "@ionic/vue": "^7.0.6",
         "@ionic/vue-router": "^7.0.6",
@@ -93,7 +93,7 @@
         "ms": "^2.1.3",
         "normalize-url": "^8.0.0",
         "on-change": "^4.0.2",
-        "pg": "^8.10.0",
+        "pg": "=8.10.0",
         "pg-native": "^3.0.1",
         "process": "^0.11.10",
         "reflect-metadata": "^0.1.13",
@@ -101,7 +101,7 @@
         "sql.js": "^1.8.0",
         "triple-beam": "^1.3.0",
         "tslib": "^2.5.0",
-        "typeorm": "^0.3.12",
+        "typeorm": "0.3.12",
         "util": "^0.12.5",
         "uuid": "^9.0.0",
         "vue": "^3.3.2",
@@ -114,7 +114,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.21.8",
-        "@capacitor/cli": "4.0.1",
+        "@capacitor/cli": "^5.0.0",
         "@commitlint/cli": "^17.6.3",
         "@commitlint/config-conventional": "^17.6.3",
         "@ionic/cli": "^7.1.1",
