chore(common): prepare for getting actions instead of schemas #15

--- a/src/server/configs/default/server.yml
+++ b/src/server/configs/default/server.yml
@@ -17,7 +17,15 @@ engine:
     useQueryStringLibrary: true
 
 csp:
+    enable: true
     includeSelf: true
     length: 32
     nonceAlgo: "sha512"
     hashes: []
+
+csrf:
+    enable: true
+
+cors:
+    enable: true
+    policy: "same-origin"
