fix(server): any type prevents using api and missing cors #15

--- a/src/server/configs/default/server.yml
+++ b/src/server/configs/default/server.yml
@@ -29,3 +29,21 @@ csrf:
 cors:
     enable: true
     policy: "same-origin"
+    allowForeignCredentials: false
+    allowedMethods:
+        - "GET"
+        - "HEAD"
+        - "PUT"
+        - "PATCH"
+        - "POST"
+        - "DELETE"
+    allowedHeaders:
+        - "content-type"
+        - "redirect"
+        - "mode"
+    allowedOrigins:
+        - "capacitor://localhost"
+        - "ionic://localhost"
+        - "http://localhost"
+        - "http://localhost:8080"
+        - "http://localhost:8100"
