--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
         "app-root-path": "^3.1.0",
         "compression": "^1.7.4",
         "core-js": "^3.30.2",
+        "cors": "^2.8.5",
         "csurf": "^1.11.0",
         "deepdash": "^5.3.9",
         "deepdash-es": "^5.3.9",
@@ -121,6 +122,7 @@
         "@types/app-root-path": "^1.2.5",
         "@types/chai": "^4.3.5",
         "@types/compression": "^1.7.2",
+        "@types/cors": "^2.8.13",
         "@types/csurf": "^1.11.2",
         "@types/express": "^4.17.17",
         "@types/express-session": "^1.17.7",
