--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
         "ms": "^2.1.3",
         "normalize-url": "^8.0.0",
         "on-change": "^4.0.2",
+        "path-browserify": "^1.0.1",
         "pg": "=8.10.0",
         "pg-native": "^3.0.1",
         "process": "^0.11.10",
