--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
         "deepdash": "^5.3.9",
         "deepdash-es": "^5.3.9",
         "express": "^4.18.2",
+        "express-query-parser": "^1.3.3",
         "express-session": "^1.17.3",
         "file-type": "^18.4.0",
         "fs-extra": "^11.1.1",
