--- a/package.json
+++ b/package.json
@@ -61,13 +61,13 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.22.5",
-        "@capacitor/android": "^5.0.0",
-        "@capacitor/app": "^5.0.0",
-        "@capacitor/core": "^5.0.0",
-        "@capacitor/haptics": "^5.0.0",
-        "@capacitor/ios": "^5.0.0",
-        "@capacitor/keyboard": "^5.0.0",
-        "@capacitor/status-bar": "^5.0.0",
+        "@capacitor/android": "^5.0.5",
+        "@capacitor/app": "5.0.3",
+        "@capacitor/core": "^5.0.5",
+        "@capacitor/haptics": "5.0.4",
+        "@capacitor/ios": "^5.0.5",
+        "@capacitor/keyboard": "5.0.4",
+        "@capacitor/status-bar": "5.0.4",
         "@ionic/pwa-elements": "^3.1.1",
         "@ionic/vue": "^7.0.13",
         "@ionic/vue-router": "^7.0.13",
@@ -117,7 +117,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.22.5",
-        "@capacitor/cli": "^5.0.0",
+        "@capacitor/cli": "^5.0.5",
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.5",
         "@ionic/cli": "^7.1.1",
