--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -23,9 +23,11 @@
     },
     "include": [
         "./**/*.ts",
+        "./**/*.d.ts",
         "./**/*.tsx",
         "./**/*.vue",
         "./../common/**/*.ts",
+        "./../common/**/*.d.ts",
         "./../common/**/*.tsx"
     ]
 }
