--- a/src/common/tsconfig.json
+++ b/src/common/tsconfig.json
@@ -10,5 +10,10 @@
                 "./*"
             ]
         }
-    }
+    },
+    "include": [
+        "./**/*.ts",
+        "./**/*.d.ts",
+        "./**/*.tsx",
+    ]
 }
