--- a/src/common/.eslintrc
+++ b/src/common/.eslintrc
@@ -1,5 +1,8 @@
 {
     "extends": "./../../.eslintrc",
+    "parserOptions": {
+        "project": "src/common/tsconfig.json"
+    },
     "rules": {
         "boilerplate/prefer-env-import": [
             "error",
