--- a/src/server/.eslintrc
+++ b/src/server/.eslintrc
@@ -1,5 +1,11 @@
 {
     "extends": "./../../.eslintrc",
+    "env": {
+        "browser": false
+    },
+    "parserOptions": {
+        "project": "src/server/tsconfig.json"
+    },
     "rules": {
         "boilerplate/no-invalid-common-import": [
             "error"
