--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -23,8 +23,10 @@
     },
     "include": [
         "./**/*.ts",
+        "./**/*.d.ts",
         "./**/*.tsx",
         "./../common/**/*.ts",
+        "./../common/**/*.d.ts",
         "./../common/**/*.tsx"
     ]
 }
