--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
         "compile:dev:client:config": "cross-env NODE_ENV=development TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
         "//2": "",
         "build": "npm-run-all -p build:!(app)",
-        "build:server": "npm run compile:build:server:config && cross-env NODE_OPTIONS=--no-warnings webpack --mode production --config webpack.config.server.js",
-        "build:web": "npm run compile:build:client:config && cross-env NODE_OPTIONS=--no-warnings vue-cli-service build",
+        "build:server": "npm run compile:build:server:config && webpack --mode production --config webpack.config.server.js",
+        "build:web": "npm run compile:build:client:config && vue-cli-service build",
         "//2b": "",
         "compile:build:server:config": "cross-env NODE_ENV=production TS_CONFIG_PATH=src/server/tsconfig.json ENVIRONMENT=server gulp",
         "compile:build:client:config": "cross-env NODE_ENV=production TS_CONFIG_PATH=src/client/tsconfig.json ENVIRONMENT=client gulp",
@@ -38,7 +38,7 @@
         "test:unit": "npm run test:unit:server && npm run test:unit:client",
         "test:unit:server": "echo \"no test:unit:server script\"",
         "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
-        "test:e2e": "cross-env NODE_OPTIONS=--no-warnings vue-cli-service test:e2e",
+        "test:e2e": "vue-cli-service test:e2e",
         "//4b": "",
         "compile:test:unit:server:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/server/tsconfig.json ENVIRONMENT=server gulp",
         "compile:test:unit:client:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/client/tsconfig.json ENVIRONMENT=client gulp",
@@ -153,7 +153,7 @@
         "chai": "^4.3.7",
         "concurrently": "^8.2.0",
         "cross-env": "^7.0.3",
-        "cypress": "^12.15.0",
+        "cypress": "^12.16.0",
         "eslint": "^8.43.0",
         "eslint-import-resolver-typescript": "^3.5.5",
         "eslint-plugin-boilerplate": "./dev/eslint-plugin-boilerplate",
