--- a/src/client/tsconfig.json
+++ b/src/client/tsconfig.json
@@ -22,12 +22,12 @@
         ]
     },
     "include": [
-        "./**/*.ts",
-        "./**/*.d.ts",
-        "./**/*.tsx",
-        "./**/*.vue",
-        "./../common/**/*.ts",
-        "./../common/**/*.d.ts",
-        "./../common/**/*.tsx"
+        "**/*.ts",
+        "**/*.d.ts",
+        "**/*.tsx",
+        "**/*.vue",
+        "../common/**/*.ts",
+        "../common/**/*.d.ts",
+        "../common/**/*.tsx"
     ]
 }
