--- a/src/common/tsconfig.json
+++ b/src/common/tsconfig.json
@@ -12,8 +12,8 @@
         }
     },
     "include": [
-        "./**/*.ts",
-        "./**/*.d.ts",
-        "./**/*.tsx",
+        "**/*.ts",
+        "**/*.d.ts",
+        "**/*.tsx",
     ]
 }
