build(dependencies): update typescript #22

--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
         "test": "npm run test:unit && npm run test:e2e",
         "test:unit": "npm run test:unit:server && npm run test:unit:client",
         "test:unit:server": "echo \"no test:unit:server script\"",
-        "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts",
+        "test:unit:client": "npm run compile:test:unit:client:config && cross-env NODE_ENV=test nyc vue-cli-service test:unit ./tests/unit/client/index.spec.ts --inspect-brk",
         "test:e2e": "vue-cli-service test:e2e",
         "//4b": "",
         "compile:test:unit:server:config": "cross-env NODE_ENV=test TS_CONFIG_PATH=tests/unit/server/tsconfig.json ENVIRONMENT=server gulp",
@@ -118,6 +118,7 @@
     },
     "devDependencies": {
         "@babel/core": "^7.22.9",
+        "@babel/plugin-transform-class-static-block": "^7.22.5",
         "@capacitor/cli": "^5.2.1",
         "@commitlint/cli": "^17.6.5",
         "@commitlint/config-conventional": "^17.6.6",
@@ -187,7 +188,7 @@
         "type-fest": "^3.13.0",
         "typedoc": "^0.24.8",
         "typedoc-plugin-rename-defaults": "^0.6.5",
-        "typescript": "^5.0.4",
+        "typescript": "^5.1.6",
         "typescript-transformer-boilerplate": "./dev/typescript-transformer-boilerplate/",
         "webpack": "^5.88.1",
         "webpack-cli": "^5.1.4",
