chore: update database related dependencies #22

--- a/package.json
+++ b/package.json
@@ -97,15 +97,15 @@
         "normalize-url": "^8.0.0",
         "on-change": "^4.0.2",
         "path-browserify": "^1.0.1",
-        "pg": "^8.11.1",
+        "pg": "^8.11.3",
         "pg-native": "^3.0.1",
         "process": "^0.11.10",
-        "reflect-metadata": "^0.1.13",
+        "reflect-metadata": "^0.2.1",
         "setimmediate": "^1.0.5",
-        "sql.js": "^1.8.0",
+        "sql.js": "^1.10.2",
         "triple-beam": "^1.4.1",
         "tslib": "^2.6.0",
-        "typeorm": "0.3.12",
+        "typeorm": "^0.3.20",
         "util": "^0.12.5",
         "uuid": "^9.0.0",
         "vue": "^3.3.4",
