chore: update dev dependencies #22

--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
         "prepare": "npm-run-all -s prepare:*",
         "prepare:eslint-plugin-boilerplate": "cd ./dev/eslint-plugin-boilerplate && npm ci && npm run build",
         "prepare:typescript-transformer-boilerplate": "cd ./dev/typescript-transformer-boilerplate && npm ci && npm run build",
-        "prepare:husky": "is-ci || husky install",
+        "prepare:husky": "is-ci || husky",
         "prepare:ts-patch": "ts-patch install"
     },
     "dependencies": {
@@ -161,12 +161,12 @@
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-vue": "^9.23.0",
         "gulp": "^4.0.2",
-        "husky": "^8.0.3",
+        "husky": "^9.0.11",
         "is-ci": "^3.0.1",
         "json-to-ts": "^1.7.0",
-        "lint-staged": "^13.2.3",
+        "lint-staged": "^15.2.2",
         "make-dir-cli": "^3.1.0",
-        "native-run": "^1.7.2",
+        "native-run": "^2.0.1",
         "nodemon": "^3.1.0",
         "npm": "^10.5.0",
         "npm-run-all": "^4.1.5",
@@ -174,10 +174,10 @@
         "prompts": "^2.4.2",
         "random-input-generator": "^1.0.0",
         "sass": "^1.72.0",
-        "sass-loader": "^13.3.2",
-        "stylelint": "^15.10.1",
-        "stylelint-config-clean-order": "^5.0.1",
-        "stylelint-config-standard-scss": "^10.0.0",
+        "sass-loader": "^14.1.1",
+        "stylelint": "^16.2.1",
+        "stylelint-config-clean-order": "^5.4.1",
+        "stylelint-config-standard-scss": "^13.0.0",
         "thread-loader": "^4.0.2",
         "ts-loader": "^9.5.1",
         "ts-patch": "^3.1.2",
