--- a/package.json
+++ b/package.json
@@ -62,16 +62,16 @@
     },
     "dependencies": {
         "@babel/runtime": "^7.22.6",
-        "@capacitor/android": "^5.2.1",
-        "@capacitor/app": "5.0.3",
-        "@capacitor/core": "^5.2.1",
-        "@capacitor/haptics": "5.0.4",
-        "@capacitor/ios": "^5.2.1",
-        "@capacitor/keyboard": "5.0.4",
-        "@capacitor/status-bar": "5.0.4",
-        "@ionic/pwa-elements": "^3.2.1",
-        "@ionic/vue": "^7.1.3",
-        "@ionic/vue-router": "^7.1.3",
+        "@capacitor/android": "^5.7.3",
+        "@capacitor/app": "^5.0.7",
+        "@capacitor/core": "^5.7.3",
+        "@capacitor/haptics": "^5.0.7",
+        "@capacitor/ios": "^5.7.3",
+        "@capacitor/keyboard": "^5.0.8",
+        "@capacitor/status-bar": "^5.0.7",
+        "@ionic/pwa-elements": "^3.2.2",
+        "@ionic/vue": "^7.8.0",
+        "@ionic/vue-router": "^7.8.0",
         "app-root-path": "^3.1.0",
         "compression": "^1.7.4",
         "core-js": "^3.36.0",
@@ -119,10 +119,10 @@
     "devDependencies": {
         "@babel/core": "^7.24.0",
         "@babel/plugin-transform-class-static-block": "^7.23.4",
-        "@capacitor/cli": "^5.2.1",
+        "@capacitor/cli": "^5.7.3",
         "@commitlint/cli": "^19.2.0",
         "@commitlint/config-conventional": "^19.1.0",
-        "@ionic/cli": "^7.1.1",
+        "@ionic/cli": "^7.2.0",
         "@types/app-root-path": "^1.2.8",
         "@types/chai": "^4.3.12",
         "@types/compression": "^1.7.5",
