build: remove building config for server (for now) #22

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
             #   run: npm run type-coverage
 
             - name: Compile test pre requisites
-              run: npm run compile:test:unit:server:config && npm run compile:test:unit:client:config
+              run: npm run compile:test:unit:client:config
 
             - name: Run unit tests
               uses: nick-fields/retry@v2
